# cambrian

./: .gitignore  CITATION.cff  README.md  clear.py  fsdp_config.json  inference.py  pyproject.toml
.github/workflows/: static.yml
cambrian/: __init__.py  conversation.py  mm_utils.py  utils.py
cambrian/model/: __init__.py  builder.py  cambrian_arch.py  consolidate.py  vision_sampler.py
cambrian/model/language_model/: cambrian_cohere.py  cambrian_gemma.py  cambrian_llama.py  cambrian_mistral.py  cambrian_phi3.py
cambrian/model/multimodal_encoder/: base_encoder.py  builder.py  clip_convnext_encoder.py  clip_encoder.py  dfn_clip_encoder.py  diffusion_encoder.py  dino_encoder.py  eva_clip_encoder.py  hybrid_encoder.py  ijepa_encoder.py  load.py  mae_encoder.py  maws_encoder.py  midas_encoder.py  moco_encoder.py  (+6 more)
cambrian/serve/: cli.py  controller.py  gradio_web_server.py  model_worker.py  register_worker.py  sglang_worker.py  test_message.py
cambrian/train/: cambrian_trainer.py  cambrian_trainer_gpu.py  gcloud_rsync_callback.py  train_fsdp.py  train_fsdp_gpu.py  train_gpu.py  train_mem.py  train_spmd.py  train_tpu.py  train_xformers.py  wandb_nan_alert_callback.py
dataengine/: README.md  clean_and_rename_files.py  generate_qa.py  generate_topics.py  generate_vqa.py  process_json_files.py  requirements.txt  runall.sh  topics_postprocess1.py  topics_postprocess2.py  wikiflow.py
dataengine/data/: .gitignore  example_input_fields_subfields.txt
dataengine/qadata/: Geology_and_Earth_Sciences.json  Renewable_Energy_and_Sustainability.json
dataengine/topics/: Geology_and_Earth_Sciences.json  Renewable_Energy_and_Sustainability.json
dataengine/vqadata/: Geology_and_Earth_Sciences.json  Renewable_Energy_and_Sustainability.json
docs/: TPUs_Torch_XLA.md
eval/: README.md  SLURM.md  convert_hf_model.py  requirements.txt  ssl.sh  tabulate.ipynb  tabulate.py
eval/scripts/: consolidate.py  consolidate_gcp.bash  convert_hf_model.py  e2e.bash  run_all_benchmarks.sh  run_benchmark.sh  submit_all_benchmarks.bash  submit_all_benchmarks_single.bash  submit_eval.bash  tabulate.py  yi-eval.sh
eval/slurm/: README.md  consolidate.slurm  consolidate_yi.slurm  e2e.bash  eval_benchmark.slurm  eval_mme.slurm  eval_mmmu.slurm  submit_all_benchmarks_parallel.bash  submit_all_benchmarks_single.bash  submit_eval.bash
scripts/: zero2.json
scripts/cambrian/: finetune_cambrian_13b.sh  finetune_cambrian_34b.sh  finetune_cambrian_8b.sh  pretrain_cambrian_13b.sh  pretrain_cambrian_34b.sh  pretrain_cambrian_8b.sh
scripts/gpu_cambrian/: finetune_cambrian_8b.sh  pretrain_cambrian_8b.sh
scripts/infra/: create_cambrian_tpu.sh  delete_suspended.bash  list_tpu.bash  restart_tpu_job.sh
site/: .gitignore  404.html  README.md  bibliography.bib  index.html
(+291 files in other folders)
