[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cambrian"
version = "1.0.0"
description = "A Fully Open, Vision-Centric Exploration of Multimodal LLMs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.3.1", "torchvision==0.18.1",
    "transformers==4.42.4", "tokenizers==0.19.1", "sentencepiece==0.2.0", "shortuuid",
    "accelerate==0.32.1", "peft==0.11.1",
    "pydantic", "markdown2[all]", "numpy==1.26.4", "scikit-learn==1.5.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.8.0", "einops-exts==0.0.4", "timm==1.0.7",
    "open_clip_torch", "diffusers[torch]", "torchtext==0.18.0",
    "ezcolorlog", "gcsfs",
]

[project.optional-dependencies]
gpu = ["bitsandbytes==0.43.1", "deepspeed==0.14.4", "ninja", "wandb","swanlab", "ujson", "fastapi", "gradio==4.16.0", "gradio_client==0.8.1"]
tpu = ["ninja", "wandb"]

[project.urls]
"Homepage" = "https://cambrian-mllm.github.io/"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
